<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/Payment_Log_Recycler_Background"
    android:orientation="vertical"
    android:gravity="center_horizontal" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:padding="15dp"
        android:orientation="vertical"
        android:gravity="center_horizontal" >

        <TextView
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:text="@string/dialog_add_note"
            android:textColor="@color/Black"
            android:textStyle="bold"
            android:textSize="26sp"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/addTextNoteButton"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/dialog_text_note"
            android:textColor="@color/White"
            android:backgroundTint="@color/colorPrimary"
            android:textSize="15sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/addChecklistNoteButton"
            android:text="@string/dialog_checklist_note"
            android:textColor="@color/White"
            android:backgroundTint="@color/colorPrimary"
            android:textSize="15sp" />


    </LinearLayout>





</FrameLayout>