<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent_paymentLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="3dp"
    android:layout_marginVertical="4dp"
    android:backgroundTint="@color/Payment_Log_Recycler_Background"
    android:orientation="vertical"
    android:padding="8dp"
    android:paddingHorizontal="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/recyclerview_payment_job_date"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textStart" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="5dp"
            android:text="@string/recyclerview_payment_hours_of_work"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/workHours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="3"
            android:textAlignment="textStart"
            tools:ignore="RtlCompat" />

        <Button
            android:id="@+id/deletePayment"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="1dp"
            android:layout_height="40dp"
            android:layout_weight="0.5"
            android:foreground="@drawable/ic_remove_button"
            android:padding="10dp" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/recyclerview_payment_job_description"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textStart" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/recyclerview_payment_wage"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/employmentDebt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textStart" />


    </LinearLayout>


</LinearLayout>